refactor(core): modernize core code with java 17 features
- simplify type checks with instanceof pattern matching
- use `Stream.toList` and `HexFormat`
- replace multiline string builders with text blocks

Co-authored-by: Codex <codex@openai.com>